--- a/scss/styles_admin.scss
+++ b/scss/styles_admin.scss
@@ -1,125 +1,64 @@
-#wpcontent {
-  background: #00aeef;
-  position: absolute !important;
-  width: 100%;
-  .wrap {
-    margin:0 auto;
-    width: 300px;
-//    height: 240px;
-    transform: translateX(-70px);
-    position: relative;
-    .login-logo {
-      margin: 0 auto 60px;
-      width: 185px;
-      height: 185px;
-      background-image: url("https://app.crowdskout.com/assets/img/crowdskout-login-logo.png");
-    }
-    .cskt_connect {
-      input {
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-        background: transparent;
-        padding: 14px 8px;
-        border-radius: 0;
-        border: 3px solid #fff;
-        color: #fff;
-        margin-bottom: 10px;
-        font-size: 14px;
-        letter-spacing: 1px;
-        font-weight: 400;
-      }
-      ::-webkit-input-placeholder {
-        color: #fff;
-      }
+.cskt_login {
+  input {
 
-      :-moz-placeholder { /* Firefox 18- */
-        color: #fff;
-      }
+  }
+  ::-webkit-input-placeholder {
+    color: #fff;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: #fff;
+  }
+  ::-moz-placeholder {  /* Firefox 19+ */
+    color: #fff;
+  }
+  :-ms-input-placeholder {
+    color: #fff;
+  }
+  input[type="submit"] {
 
-      ::-moz-placeholder {  /* Firefox 19+ */
-        color: #fff;
-      }
+  }
+  #submit_response {
 
-      :-ms-input-placeholder {
-        color: #fff;
-      }
-      input[type="submit"] {
-        float: right;
-        width: 35%;
-        background: #fff;
-        color: #00aeef;
-        text-transform: uppercase;
-      }
-      #submit_response {
-        color: #fff;
-      }
-      .response_waiting:before {
-        content: 'Please wait...';
-      }
-      .response_success:before {
+  }
 
-      }
-      .response_error:before {
-        content: 'Invalid credentials';
-      }
-    }
+  .response_waiting:before {
+    content: 'Please wait...';
+  }
 
-    #cskt_oauth {
-      display: none;
-      label {
-        color: #fff;
-        font-size: 14px;
-        letter-spacing: 1px;
-        font-weight: 400;
-      }
-      #cskt_accounts {
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-        background: transparent;
-        padding: 14px 8px;
-        border-radius: 0;
-        border: 3px solid #fff;
-        color: #fff;
-        margin-bottom: 10px;
-        font-size: 14px;
-        letter-spacing: 1px;
-        font-weight: 400;
-        margin-top: 10px;
-      }
-      input[type="submit"] {
-        box-sizing: border-box;
-        display: block;
-        padding: 14px 8px;
-        border-radius: 0;
-        border: 3px solid #fff;
-        margin-bottom: 10px;
-        font-size: 14px;
-        letter-spacing: 1px;
-        font-weight: 400;
-        float: right;
-        width: 35%;
-        background: #fff;
-        color: #00aeef;
-        text-transform: uppercase;
-      }
-    }
+  .response_success:before {
+
+  }
+
+  .response_error:before {
+    content: 'Invalid credentials';
+  }
+}
+
+#cskt_connect {
+  display: none;
+  label {
+
+  }
+  #cskt_accounts {
+
+  }
+  input[type="submit"] {
+
   }
 }
 
 @media only screen and (max-width: 960px) { // sidebar shrinks
-  #wpcontent {
-    .wrap {
-      transform: translateX(0);
-    }
-  }
+//  #wpcontent {
+//    .wrap {
+//      transform: translateX(0);
+//    }
+//  }
 }
 
 @media only screen and (max-width: 783px) { // sidebar disapears
-  #wpcontent {
-    .wrap {
-      transform: translateX(0);
-    }
-  }
+//  #wpcontent {
+//    .wrap {
+//      transform: translateX(0);
+//    }
+//  }
 }
